g_type_query() doesn't work for dynamic types
@gcampagna
Submitted by Giovanni Campagna Link to original bug (#687211)
Description
As subject says, g_type_query() rejects as invalid all queries for dynamic types, and this causes bug 687184 in gjs. Given that we expect all modules to be resident anyway, is there any reason for this behaviour?