object: Use "associated memory" API instead of malloc counter

This new API replaces the old malloc counter API. The calls to
JS::AddAssociatedMemory() and JS::RemoveAssociatedMemory() must be
exactly matched, so we have to move things around a bit in order to
ensure that every object gets associated memory. Previously, we did it
sort of hand-wavingly in init_impl().

SpiderMonkey provides 5 slots in the JS::MemoryUse enum for use by
embedders so we start defining aliases for those in wrapperutils.h.

We should really add this to wrapperutils.h so that boxed types, etc.
also get memory associated with them, but I don't think we can do that
generally until https://gitlab.gnome.org/GNOME/glib/issues/623 is fixed
because for custom JS types we need the workaround in
ObjectBase::type_query_dynamic_safe().